20070813
 - (dtucker) [session.c] Bug #1339: ensure that pam_setcred() is always
   called with PAM_ESTABLISH_CRED at least once, which resolves a problem
   with pam_dhkeys.  Patch from David Leonard, ok djm@

20070810
 - (dtucker) [auth-pam.c] Use sigdie here too.  ok djm@
 - (dtucker) [configure.ac] Bug #1343: Set DISABLE_FD_PASSING for QNX6. From 
   Matt Kraai, ok djm@ 

20070809
 - (dtucker) [openbsd-compat/port-aix.c] Comment typo.
 - (dtucker) [README.platform] Document the interaction between PermitRootLogin
   and the AIX native login restrictions.
 - (dtucker) [defines.h] Remove _PATH_{CSHELL,SHELLS} which aren't
   used anywhere and are a potential source of warnings.

20070808
 - (djm) OpenBSD CVS Sync
   - ray@cvs.openbsd.org 2007/07/12 05:48:05
     [key.c]
     Delint: remove some unreachable statements, from Bret Lambert.
     OK markus@ and dtucker@.
   - sobrado@cvs.openbsd.org 2007/08/06 19:16:06
     [scp.1 scp.c]
     the ellipsis is not an optional argument; while here, sync the usage
     and synopsis of commands
     lots of good ideas by jmc@
     ok jmc@
   - djm@cvs.openbsd.org 2007/08/07 07:32:53
     [clientloop.c clientloop.h ssh.c]
     bz#1232: ensure that any specified LocalCommand is executed after the
     tunnel device is opened. Also, make failures to open a tunnel device
     fatal when ExitOnForwardFailure is active.
     Reported by h.goebel AT goebel-consult.de; ok dtucker markus reyk deraadt

20070724
 - (tim) [openssh.xml.in] make FMRI match what package scripts use.
 - (tim) [openbsd-compat/regress/closefromtest.c] Bug 1345: fix open() call.
   Report/patch by David.Leonard AT quest.com (and Bernhard Simon)
 - (tim) [buildpkg.sh.in openssh.xml.in] Allow more flexibility where smf(5)
 - (tim) [buildpkg.sh.in] s|$FAKE_ROOT/${sysconfdir}|$FAKE_ROOT${sysconfdir}|

20070628
 - (djm) bz#1325: Fix SELinux in permissive mode where it would
   incorrectly fatal() on errors. patch from cjwatson AT debian.org;
   ok dtucker
